# opengl

./: .gitignore  CMakeLists.txt  README.md  nano.7706.save  notes.md  run
assets/objects+textures/dog/: resize_tool
assets/objects+textures/ground/: ground.mtl
assets/objects+textures/unused/: floor.mtl
assets/shaders/: default.frag  default.vert  grid.frag  grid.vert  skybox.frag  skybox.vert
includes/: ResourceManager.h  camera.h  defines.h  engine.h  entity.h  grid.h  log.h  mesh.h  model.h  renderer.h  shader.h  skybox.h  texture.h  window.h
includes/glad/: glad.h
src/: camera.cpp  engine.cpp  entity.cpp  glad.c  grid.cpp  main.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  skybox.cpp  texture.cpp  window.cpp
